SERVER-48505 NetworkInterfaceTest's StartCommandAny should use failpoint to disable killing of pending operations

(cherry picked from commit 13513b54688c30b4ecb35c45655e93cca1249a3e)